# drf-minimal-api_logger

./: .gitignore  LICENSE  README.md  pyproject.toml
drf_minimal_api_logger/: README.md  __init__.py  apps.py  middleware.py  pyproject.toml
