[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-minimal-api-logger"
version = "0.1.0"
authors = [
    { name="Elgun Huseynzade", email="your-email@example.com" }
]
description = "A lightweight, beautiful execution time logger middleware for Django REST Framework."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/husubayli/drf-minimal-api-logger"
"Bug Tracker" = "https://github.com/husubayli/drf-minimal-api-logger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["drf_minimal_api_logger*"]
