[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-minimal-api-logger"
version = "0.1.0"
authors = [
    { name="Elgun Huseynzade", email="your-email@example.com" }
]
description = "A lightweight, beautiful execution time logger middleware for Django REST Framework."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Django>=4.0",
]